--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,25 @@
 .banner{
-    background-image: url(/portfolio/e.jpg);
+    background-image: url(/portfolio/j.jpg); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     
     padding: 250px 0px;
 }
-.id{
-   background-image: url(/portfolio/99.jpg);
-    background-size: cover;
-    background-position: center;
-    
+
+.container-e{
+     background-image: url(/portfolio/li.jpg);
 }
+
+.container-id{
+     background-image: url(/portfolio/k.jpg);
+}
+
+.id{
+   background-image: url(/portfolio/18.jpg);
+      background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+
+    }
