--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Poetsen+One&display=swap');
 
 .banner{
-    background-image: url(./Banner-bg.jpg); 
+    background-image: url('./Banner-bg.jpg'); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -14,18 +14,18 @@
 }
 
 #about{
-     background-image: url(./About-bg.jpg);
+     background-image: url('./About-bg.jpg');
      min-height: 100vh;
 }
 
 
 #skills{
-     background-image: url(./Skill-bg.jpg);
+     background-image: url('./Skill-bg.jpg');
      min-height: 100vh;
 }
 
 #contact{
-   background-image: url(./Contact-bg.jpg);
+   background-image: url('./Contact-bg.jpg');
       background-size: cover;
       min-height: 100vh;
     background-position: center;
