--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.banner{
+.Home-banner{
     background-image: url(./Banner-bg.jpg); 
     background-size: cover;
     background-position: center;
